--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,5 +54,8 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
+    //Splash screen
+    implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
+
 
 }
