--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,9 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        //progress bar
+        maven { url "https://jitpack.io"}
+
     }
 }
 rootProject.name = "Nutritions App"
