--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.databinding:viewbinding:7.2.1'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.junit.jupiter:junit-jupiter'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -61,6 +62,7 @@ dependencies {
     implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
 
     //progress bar
+
     implementation 'com.github.lzyzsd:circleprogress:1.2.1'
 
     //CircleImageView
