--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     //material 3
     implementation "androidx.compose.material3:material3:1.0.0-alpha14"
     implementation "androidx.compose.material3:material3-window-size-class:1.0.0-alpha14"
+    implementation 'com.google.android.material:material:1.0.0'
 
     //Splash screen
     implementation 'androidx.core:core-splashscreen:1.0.0-rc01'
